# badgr-lite

./: .gitignore  .travis.yml  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  Pipfile  README.md  README.rst  badgr_lite.py  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_dev.txt  requirements_graph.txt  setup.cfg  setup.py  test_badgr_lite.py  tests.py  tox.ini
.circleci/: config.yml
badgr_lite/: __init__.py  cli.py  exceptions.py  helpers.py  models.py
badgr_lite/badge/: commands.py  exceptions.py  helpers.py  main.py  models.py  trash.py  trash2.py
docs/: Makefile  badgr_lite.rst  conf.py  index.rst  installation.rst  modules.rst  tutorial.rst  usage.rst
requirements/: dev.txt  graph.txt  requirements.txt
tests/: __init__.py  cli.py  test_badgr_lite.py
tests/vcr_cassettes/: award_bad_badge_id.yaml  award_badge.yaml  award_badge_bad_data.yaml  badge_retrieval.yaml  expired_auth_token.yaml  invalid_grant_token.yaml  no_valid_auth_token.yaml  try_refresh_token.yaml
vcr_cassettes/: badge_retrieval.yaml  no_valid_auth_token.yaml
