[tool.poetry]
name = "badgr-lite"
version = "0.1.0"
description = "Automate awarding Badgr (or equivalent) badges to recipients without the overhead of badgr-server"
authors = ["Glen Jarvis <<glen@glenjarvis.com>>"]
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.1.2"
pytz = "^2020.1"

[tool.poetry.dev-dependencies]
vcrpy = "^4.1.0"
coverage = "^5.2.1"
codecov = "^2.1.9"
flake8 = "^3.8.3"
pylint = "^2.6.0"
mypy = "<1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
