[tool.poetry]
name = "badgr-lite"
version = "0.1.0"
description = "Automate awarding Badgr (or equivalent) badges to recipients without the overhead of badgr-server"
authors = ["Glen Jarvis <<glen@glenjarvis.com>>"]
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]

[tool.poetry.dependencies]
python = ">=3.6.2,<4.0"
click = "^8"
pytz = "^2021.3"

[tool.poetry.dev-dependencies]
vcrpy = "^4.1.0"
coverage = "^6.0"
codecov = "^2.1.9"
flake8 = "^4.0"
pylint = ">=2.12"
mypy = "<1"
types-click = "^7.1"
types-pytz = "^2021.1"
types-requests = "^2.25"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
