[tool.poetry]
name = "badgr-lite"
version = "0.1.0"
description = "Automate awarding Badgr (or equivalent) badges to recipients without the overhead of badgr-server"
authors = ["Glen Jarvis <<glen@glenjarvis.com>>"]
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]


[tool.poetry.scripts]
badgr = "badgr_lite.cli:main"

[tool.poetry.dependencies]
python = ">=3.7 <3.12"
click = "^8.1"
pytz = "^2023.3"
certifi = ">=2022.12.07" # Removes "TrustCor" from the root store
requests = ">=2.31" # Fix leak of Proxy-Authorization header

[tool.poetry.dev-dependencies]
vcrpy = "^4.2.1"
coverage = "^7.2"
black = "^23.3"
pex = "^2.1"
#pylint = "^2.12"
#mypy = "<1"
#types-click = "^7.1"
#types-pytz = "^2021.1"
#types-requests = "^2.25"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
